add testing environment